--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -83,6 +83,7 @@
     <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\sylvester.src.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\wormhole.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ActionsMenuController.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\BattleRenderingManager.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\BrowserBackwardCompatibility.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientEvents.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\ClientStateManager.js" />
