--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -341,6 +341,9 @@
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\ControllerRenderingSystem.js">
       <Filter>Javascript\Render\Systems</Filter>
     </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\BattleRenderingManager.js">
+      <Filter>Javascript\BattleRendering</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
@@ -432,6 +435,9 @@
     </Filter>
     <Filter Include="Javascript\Editor\Systems">
       <UniqueIdentifier>{0cd8018d-c387-4562-af53-fd5afb424da9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Javascript\BattleRendering">
+      <UniqueIdentifier>{b8d23214-fe79-48c2-9476-772165c0714f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
