--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -69,8 +69,8 @@
     <None Include="..\..\MobileClient\LocalFiles\Assets\Editor.css" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Game.css" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Main.css" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\Render\GameWorldRenderer.css" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Render\Placeables.css" />
+    <None Include="..\..\MobileClient\LocalFiles\Assets\Render\SceneRenderer.css" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Render\SpriteAnimations\Base.js" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Render\SpriteAnimations\TeslaTrooper.js" />
     <None Include="..\..\MobileClient\LocalFiles\Assets\Render\TileRenderingSystem.css" />
@@ -109,6 +109,7 @@
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\ImageUtils\SpriteColorizeManager.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\ImageUtils\SpriteTracker.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\RenderEvents.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\SceneRenderer.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\StoreRender.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\ActionFogRenderingSystem.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\ActionsRenderingSystem.js" />
