* BattleRenderingManager now initializes two battle fields systems with their separate rendering (canvases). Resizing is handled correctly, scenes are scaled down when needed (so image is preserved). * Moved BattleScreen stuff to separate css file.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -347,6 +347,9 @@
     <None Include="..\..\MobileClient\LocalFiles\Assets\Render\SceneRenderer.css">
       <Filter>Assets\Render</Filter>
     </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\BattleFieldRenderer.js">
+      <Filter>Javascript\BattleRendering</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
