Battle Screen: * Units now have concept for positions in the entity system. * Rendering of units on their positions (similar to tile placeables). Uses placeable assets, till custom ones are made. * Generate units in triangle battle formation according to unit-placeable health (experimental). * Add Uninitialize phase of a battle.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -356,11 +356,23 @@
     <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\BattleRenderingEvents.js">
       <Filter>Javascript\BattleRendering</Filter>
     </None>
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Systems\BattleFieldRenderingSystem.js">
-      <Filter>Javascript\BattleRendering\Systems</Filter>
-    </None>
     <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Systems\BattleFieldBackgroundSystem.js">
       <Filter>Javascript\BattleRendering\Systems</Filter>
+    </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Components\CBattleUnit.js">
+      <Filter>Javascript\BattleRendering\Components</Filter>
+    </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Systems\BattleFieldControllerSystem.js">
+      <Filter>Javascript\BattleRendering\Systems</Filter>
+    </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Components\CSpatial.js">
+      <Filter>Javascript\BattleRendering\Components</Filter>
+    </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Systems\BattleFieldUnitsRenderingSystem.js">
+      <Filter>Javascript\BattleRendering\Systems</Filter>
+    </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Components\CBattleUnitRendering.js">
+      <Filter>Javascript\BattleRendering\Components</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -459,6 +471,9 @@
     </Filter>
     <Filter Include="Javascript\BattleRendering\Systems">
       <UniqueIdentifier>{65ed4155-2433-464a-b368-5ce12ebff3e4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Javascript\BattleRendering\Components">
+      <UniqueIdentifier>{b41170c7-0586-48d7-b39a-c70b26704736}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
