--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -87,8 +87,12 @@
     <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\BattleFieldRenderer.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\BattleRenderingEvents.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\BattleRenderingManager.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Components\CBattleUnit.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Components\CBattleUnitRendering.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Components\CSpatial.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Systems\BattleFieldBackgroundSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Systems\BattleFieldRenderingSystem.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Systems\BattleFieldControllerSystem.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Systems\BattleFieldUnitsRenderingSystem.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\BrowserBackwardCompatibility.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientEvents.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\ClientStateManager.js" />
