--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -31,6 +31,7 @@
     <None Include="..\..\Core\Engine\Utils\Subscriber.js" />
     <None Include="..\..\Core\Engine\Utils\Utils.js" />
     <None Include="..\..\Core\Gameplay\Actions\ActionAttack.js" />
+    <None Include="..\..\Core\Gameplay\Actions\ActionBuy.js" />
     <None Include="..\..\Core\Gameplay\Actions\ActionCapture.js" />
     <None Include="..\..\Core\Gameplay\Actions\ActionCreate.js" />
     <None Include="..\..\Core\Gameplay\Actions\ActionHeal.js" />
