* Optimized: pause animations (ticker!) while panning and not showing battle screen. Panning is now way smoother, since ticker doesn't race with touchmove events. * Additional optimizations on tapping tile, trying to make taps more responsive.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -389,6 +389,9 @@
     <None Include="..\..\Core\Gameplay\Actions\ActionBuy.js">
       <Filter>Javascript\Core\Gameplay\Actions</Filter>
     </None>
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\AnimationSystemScrollOptimizer.js">
+      <Filter>Javascript\Render\Systems</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
