--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -140,6 +140,7 @@
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\TileGlobals.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\WorldLayers.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\UnitFactoryClient.js" />
+    <None Include="..\..\MobileClient\LocalFiles\Javascript\Utils\ClientDevUtils.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Utils\ClientUtils.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Utils\DOMSubscriber.js" />
     <None Include="..\..\MobileClient\LocalFiles\Javascript\Utils\FrameStats.js" />
