* PhoneGap migration left-overs.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -65,87 +65,86 @@
     <None Include="..\..\Internal Tools\Libs\jscolor\jscolor.js" />
     <None Include="..\..\Internal Tools\SpriteTestground\SpriteTestground-Main.js" />
     <None Include="..\..\Internal Tools\SpriteTestground\SpriteTestground.html" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\ActionMenu.css" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\BattleScreen.css" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\DevConsole.css" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\Dialogs.css" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\Editor.css" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\Game.css" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\Main.css" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\Render\Placeables.css" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\Render\SceneRenderer.css" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\Render\SpriteAnimations\Base.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\Render\SpriteAnimations\Particles\GroundExplosion.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\Render\SpriteAnimations\TeslaTrooper.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Assets\Render\TileRenderingSystem.css" />
-    <None Include="..\..\MobileClient\LocalFiles\index.html" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\Blob.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\FileSaver.min.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\iscroll.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\persist.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\sprite.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\sylvester.src.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\3rdParty\wormhole.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\ActionsMenuController.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\BattleFieldRenderer.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\BattleRenderingEvents.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\BattleRenderingManager.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Components\CBattleUnit.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Components\CBattleUnitRendering.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Components\CSpatial.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Systems\BattleFieldBackgroundSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Systems\BattleFieldControllerSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Systems\BattleFieldUnitsAnimationsController.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Systems\BattleFieldUnitsParticleSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BattleRendering\Systems\BattleFieldUnitsRenderingSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\BrowserBackwardCompatibility.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientEvents.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\ClientStateManager.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\TestGame.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\ClientStates\WorldEditor.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\DevConsole.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Editor\Brushes.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Editor\EditorEvents.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Editor\Systems\EditorController.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Editor\Systems\EditorGamePropertiesController.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Editor\Systems\EditorUnitPropertiesController.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Main.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\PlayerController.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\ActionsRender.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Animator.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Components\CAnimations.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Components\CTileOverlayRendering.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Components\CTilePlaceableRendering.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Components\CTileRendering.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Components\CUnitRendering.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\DisplayManager.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\GameWorldRenderer.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\ImageUtils\Colors.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\ImageUtils\SpriteColorizeManager.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\ImageUtils\SpriteTracker.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\RenderEvents.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\SceneRenderer.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\StoreRender.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\ActionFogRenderingSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\ActionsRenderingSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\AnimationSystemScrollOptimizer.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\ControllerRenderingSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\LayersUpdateSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\AnimationSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\IdleAnimationsSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\TileRenderingSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\TileStructureRenderingSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\UnitRenderingSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\Systems\VisibilityFogRenderingSystem.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\TileGlobals.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Render\WorldLayers.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\UnitFactoryClient.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Utils\ClientDevUtils.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Utils\ClientUtils.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Utils\DOMSubscriber.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Utils\FrameStats.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\Utils\TickerStats.js" />
-    <None Include="..\..\MobileClient\LocalFiles\Javascript\wormhole-Mockup.js" />
+    <None Include="..\..\MobileClient\www\Assets\ActionMenu.css" />
+    <None Include="..\..\MobileClient\www\Assets\BattleScreen.css" />
+    <None Include="..\..\MobileClient\www\Assets\DevConsole.css" />
+    <None Include="..\..\MobileClient\www\Assets\Dialogs.css" />
+    <None Include="..\..\MobileClient\www\Assets\Editor.css" />
+    <None Include="..\..\MobileClient\www\Assets\Game.css" />
+    <None Include="..\..\MobileClient\www\Assets\Main.css" />
+    <None Include="..\..\MobileClient\www\Assets\Render\Placeables.css" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SceneRenderer.css" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Base.js" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Particles\GroundExplosion.js" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\TeslaTrooper.js" />
+    <None Include="..\..\MobileClient\www\Assets\Render\TileRenderingSystem.css" />
+    <None Include="..\..\MobileClient\www\index.html" />
+    <None Include="..\..\MobileClient\www\Javascript\3rdParty\Blob.js" />
+    <None Include="..\..\MobileClient\www\Javascript\3rdParty\FileSaver.min.js" />
+    <None Include="..\..\MobileClient\www\Javascript\3rdParty\iscroll.js" />
+    <None Include="..\..\MobileClient\www\Javascript\3rdParty\persist.js" />
+    <None Include="..\..\MobileClient\www\Javascript\3rdParty\sprite.js" />
+    <None Include="..\..\MobileClient\www\Javascript\3rdParty\sylvester.src.js" />
+    <None Include="..\..\MobileClient\www\Javascript\ActionsMenuController.js" />
+    <None Include="..\..\MobileClient\www\Javascript\BattleRendering\BattleFieldRenderer.js" />
+    <None Include="..\..\MobileClient\www\Javascript\BattleRendering\BattleRenderingEvents.js" />
+    <None Include="..\..\MobileClient\www\Javascript\BattleRendering\BattleRenderingManager.js" />
+    <None Include="..\..\MobileClient\www\Javascript\BattleRendering\Components\CBattleUnit.js" />
+    <None Include="..\..\MobileClient\www\Javascript\BattleRendering\Components\CBattleUnitRendering.js" />
+    <None Include="..\..\MobileClient\www\Javascript\BattleRendering\Components\CSpatial.js" />
+    <None Include="..\..\MobileClient\www\Javascript\BattleRendering\Systems\BattleFieldBackgroundSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\BattleRendering\Systems\BattleFieldControllerSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\BattleRendering\Systems\BattleFieldUnitsAnimationsController.js" />
+    <None Include="..\..\MobileClient\www\Javascript\BattleRendering\Systems\BattleFieldUnitsParticleSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\BattleRendering\Systems\BattleFieldUnitsRenderingSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\BrowserBackwardCompatibility.js" />
+    <None Include="..\..\MobileClient\www\Javascript\ClientEvents.js" />
+    <None Include="..\..\MobileClient\www\Javascript\ClientStates\ClientStateManager.js" />
+    <None Include="..\..\MobileClient\www\Javascript\ClientStates\TestGame.js" />
+    <None Include="..\..\MobileClient\www\Javascript\ClientStates\WorldEditor.js" />
+    <None Include="..\..\MobileClient\www\Javascript\cordova-Mockup.js" />
+    <None Include="..\..\MobileClient\www\Javascript\DevConsole.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Editor\Brushes.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Editor\EditorEvents.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Editor\Systems\EditorController.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Editor\Systems\EditorGamePropertiesController.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Editor\Systems\EditorUnitPropertiesController.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Main.js" />
+    <None Include="..\..\MobileClient\www\Javascript\PlayerController.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\ActionsRender.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Animator.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Components\CAnimations.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Components\CTileOverlayRendering.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Components\CTilePlaceableRendering.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Components\CTileRendering.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Components\CUnitRendering.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\DisplayManager.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\GameWorldRenderer.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\ImageUtils\Colors.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\ImageUtils\SpriteColorizeManager.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\ImageUtils\SpriteTracker.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\RenderEvents.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\SceneRenderer.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\StoreRender.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\ActionFogRenderingSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\ActionsRenderingSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\AnimationSystemScrollOptimizer.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\ControllerRenderingSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\LayersUpdateSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\AnimationSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\IdleAnimationsSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\TileRenderingSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\TileStructureRenderingSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\UnitRenderingSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\VisibilityFogRenderingSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\TileGlobals.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\WorldLayers.js" />
+    <None Include="..\..\MobileClient\www\Javascript\UnitFactoryClient.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Utils\ClientDevUtils.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Utils\ClientUtils.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Utils\DOMSubscriber.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Utils\FrameStats.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Utils\TickerStats.js" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{86B8289C-EB35-4187-9719-B33DD00D88A9}</ProjectGuid>
