--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -11,7 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\Core\AI\AIEvents.js" />
     <None Include="..\..\Core\AI\Systems\AIController.js" />
+    <None Include="..\..\Core\AI\Systems\AISimulationSystem.js" />
     <None Include="..\..\Core\Engine\3rdParty\jquery-1.9.1.js" />
     <None Include="..\..\Core\Engine\3rdParty\underscore.js" />
     <None Include="..\..\Core\Engine\Components\CTile.js" />
